--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet"  href="jogo.css">
     </head>
     <body>
-        <div class="game" ontouchstart=" jump()"><!--DIV GAME-->
+        <div class="game" ><!--DIV GAME-->
             <img src='jose.gif' class='personagem' id="personagem">
             <img src="pipe.png" class="obstaculo" id='obstaculo_obj'>
         
