--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div><!--DIV INICIAR-->
             
             <div id="GameOver_menu"><!--DIV GAMEOVER-->
+                <h1>GameOver</h1>
                 <br><br>
                 <button id="jogarDeNovo">Jogar de novo</button>
                 <button id="menu">Menu</button>
