--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
          <div>
-     <audio  id='som'preoload="matade" >
+     <audio  id='som'preoload="auto" >
         <source src="single-single-tone-short-beep.mp3" type="audio/mpeg">
      </audio>
          </div>
